--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,11 +1,11 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Montserrat, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-size: 16px;
 
   color: #f2f2f2;
-  background-color: #242424;
+  background-color: #081028;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
