--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -69,6 +69,12 @@ input {
     outline: none;
     border-color: #930eec;
   }
+  &:disabled {
+    border: 2px solid #ccc;
+    background-color: white;
+    opacity: 0.7;
+    cursor: not-allowed;
+  }
 }
 
 button {
