--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -90,7 +90,7 @@ input {
 }
 
 button {
-  background-color: #930eec;
+  background-color: #5915b1;
   font-size: 17px;
   color: #fff;
   border: none;
@@ -99,6 +99,6 @@ button {
   cursor: pointer;
   transition: background-color 0.2s ease;
   &:hover {
-    background-color: #7a00c4;
+    background-color: #5a15b6;
   }
 }
