--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -89,9 +89,27 @@ input {
   }
 }
 
+textarea {
+  resize: none;
+  min-height: 120px;
+  padding: 14px 12px;
+  font-size: 17px;
+  border-radius: 10px;
+  &:focus {
+    outline: none;
+    border-color: #930eec;
+  }
+  &:disabled {
+    border: 2px solid #ccc;
+    background-color: white;
+    opacity: 0.7;
+    cursor: not-allowed;
+  }
+}
+
 button {
   background-color: #5915b1;
-  font-size: 17px;
+  font-size: 16px;
   color: #fff;
   border: none;
   padding: 10px 16px;
